test/success/integration/_succ_expr_uminus_1.hs
x :: Int
x = -4
main = print x