test/fail/integration/_fail_grammar_expr_minus_2.hs
x :: Int
x = 4 - jl
main = print "hello"